# imvis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
imvis/: __init__.py  dicomdir_split.py  imagesc3s.py  mipz.py  nifti_convert.py  util.py
resources/: figures.pptx
src/imvis/: __init__.py  dicomdir_split.py  imagesc3s.py  mipz.py  nifti_convert.py  utils.py
src/imvis/.ipynb_checkpoints/: nifti_convert-checkpoint.py
tests/: test_jupyter.ipynb
