[project]
name = "imvis"
version = "0.0.9"
description = "Interactive visualization and processing of 3D medical images in python"
authors = [
    { name = "Xiangxi Meng", email = "mengxiangxi@pku.edu.cn" }
]
dependencies = [
    "pydicom>=2.4.4",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "SimpleITK>=2.3.1",
    "dicom2nifti>=2.4.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "imvis:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/imvis"]
